update the link to this github repository

--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@ maintainer=Milé Buurmeijer <mbuurmei@netscape.net>
 sentence=Adding weekday alarms to the DS1307 RTC functionality
 paragraph=Supports setting and checking weekdaty alarms that are persisted in the DS1307 NVRAM (non volatile RAM) to overcome power outages
 category=Real TIme Clock
-url=
+url=https://github.com/MileBuurmeijer/DS1307newAlarms
 architectures=avr,esp
 includes=DS1307new.h
 
