corrected keywords file with tabs and changed architecture to * in library.properties

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=DS1307newAlarms
-version=0.6.0
+version=0.6
 author=Milé Buurmeijer <mbuurmei@netscape.net>
 maintainer=Milé Buurmeijer <mbuurmei@netscape.net>
 sentence=Adding weekday alarms to the DS1307 RTC functionality
 paragraph=Supports setting and checking weekdaty alarms that are persisted in the DS1307 NVRAM (non volatile RAM) to overcome power outages
-category=Real TIme Clock
+category=Timing
 url=https://github.com/MileBuurmeijer/DS1307newAlarms
-architectures=avr,esp
+architectures=*
 includes=DS1307new.h
 
